<resources>
    <string name="title_activity_main">City Explorer</string>
    <string name="title_activity_maps">City Explorer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Your Saved Locations</string>
    <string name="second_fragment_label">Create a New Location</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello main fragment</string>
    <string name="hello_second_fragment">Hello location fragment. Arg: %1$s</string>
    <string name="row_start_location_symbol">!</string>
    <string name="row_text_view_name">Name</string>
    <string name="row_text_view_rating">1</string>
    <string name="row_text_view_address">Address1\nAddress2</string>
    <string name="text_view_time_for_travel">Time Available For Travel</string>
    <string name="edit_text_time_in_minutes">Time in minutes</string>
    <string name="button_export_to_json">Export to JSON</string>
    <string name="button_import_from_json">Import from JSON</string>
    <string name="button_delete_selected_locations">Delete Selected Locations</string>
    <string name="fab_content_desc_add_a_location">Click to add a Location</string>
    <string name="fab_content_desc_optimize">Click to optimize Location sort</string>
    <string name="edit_text_enter_minutes">Enter minutes</string>
    <string name="edit_text_comments">Comments</string>
    <string name="text_view_address_line_2">Address Line 2</string>
    <string name="edit_text_address_line_2">Address Line 2</string>
    <string name="text_view_city">City</string>
    <string name="edit_text_city">City</string>
    <string name="text_view_zip_postal_code">Zip/Postal Code</string>
    <string name="text_view_country">Country</string>
    <string name="text_view_united_states_of_america">United States of America</string>
    <string name="text_view_rating">Rating</string>
    <string name="edit_text_enter_rating_1_to_5">Enter Rating 1 to 5</string>
    <string name="text_view_length_of_stay">Length of Stay</string>
    <string name="edit_text_enter_comments">Enter comments</string>
    <string name="edit_text_zip_postal_code">Zip/Postal Code</string>
    <string name="button_save_location">Save Location</string>
    <string name="button_return_to_main_menu">Return to Main Menu</string>
    <string name="button_my_starting_location">My Starting Location</string>
    <string name="text_view_nickname">Nickname</string>
    <string name="edit_text_nickname">Enter a nickname</string>
    <string name="text_view_address_line_1">Address Line 1</string>
    <string name="edit_text_address_line_1">Address Line 1</string>
</resources>